--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,29 @@
 #root{
     display: flex;
 }
-
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
+}
+button {
+  background-color: rgb(26, 126, 26);
+  border-radius: 3px;
+  height: 30px
+}
+h1{
+  font-size: 3em;
+}
 .left_div {
     display: flex;
     flex-direction: column;
     width: 40%;
-    background-color: bisque;
+    background-color: rgb(188, 236, 194);
     padding: 10px;
   }
   .right_div {
     display: block;
     width: 60%;
-    background-color: coral;
+    background-color: rgb(136, 212, 121);
     padding: 10px;
   }
   .books_items {
@@ -28,3 +39,22 @@
     margin-right: 10px;
    
 }
+.right_div label {
+  display: flex;
+  margin: 20px;
+  font-size: 1.13em;
+}
+.right_div input {
+  
+  margin-left: 10px;
+  width: 100%;
+  height: 25px;
+  background-color:rgb(188, 236, 194);
+  border-radius: 2px;
+  border: none;
+}
+
+.save__btn{
+  display: block;
+  margin: 0 auto;
+  width: 145px;
